[project]
name = "unova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "connectorx>=0.4.2",
    "gradio-client>=1.8.0",
    "loguru>=0.7.3",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pillow>=11.2.0",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
